--- a/dfa_create.html
+++ b/dfa_create.html
@@ -2,7 +2,7 @@
   <style>
     body {
       margin: 0;
-      background-color: #eceff4;
+      background-color: var(--nord6);
     }
   </style>
   <script src="//cdn.jsdelivr.net/npm/force-graph"></script>
@@ -15,9 +15,25 @@
 <style>
   /* Based on quiver */
   :root {
-    --ui-black: #2e3440;
-    --ui-white: #eceff4;
-    --ui-border: #4c566a;
+    --nord0: #2e3440;
+    --nord1: #3b4252;
+    --nord2: #434c5e;
+    --nord3: #4c566a;
+    --nord4: #d8dee9;
+    --nord5: #e5e9f0;
+    --nord6: #eceff4;
+    --nord7: #8fbcbb;
+    --nord8: #88c0d0;
+    --nord9: #81a1c1;
+    --nord10: #5e81ac;
+    --nord11: #bf616a;
+    --nord12: #d08770;
+    --nord13: #ebcb8b;
+    --nord14: #a3be8c;
+    --nord15: #b48ead;
+    --nord0-a80: #2e3440cc;
+    --nord6-a625: #eceff4a3;
+    --nord10-a625: #5e81aca3;
   }
 
   .global-panel {
@@ -28,12 +44,12 @@
     height: 46px;
     padding: 4px 12px;
     z-index: 101;
-    background: var(--ui-black);
+    background: var(--nord0);
     border-radius: 8px 8px 0 0;
     text-align: center;
     font-family: sans-serif;
     font-size: 14px;
-    color: var(--ui-border);
+    color: var(--nord3);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -43,9 +59,9 @@
   .panel-button {
     display: inline-block;
     background: transparent;
-    border: 1px solid var(--ui-border);
+    border: 1px solid var(--nord3);
     border-radius: 6px;
-    color: var(--ui-white);
+    color: var(--nord6);
     padding: 6px 16px;
     cursor: pointer;
     font-size: 14px;
@@ -53,7 +69,7 @@
   }
 
   .panel-button:hover {
-    background: #3b4252;
+    background: var(--nord1);
   }
 
   .panel-button:disabled {
@@ -75,7 +91,7 @@
     padding: 20px 24px;
     padding-bottom: calc(46px + 8px);
     overflow-y: auto;
-    background: hsla(0, 0%, 10%, 0.8);
+    background: var(--nord0-a80);
     backdrop-filter: blur(4px);
     display: none;
     flex-direction: column;
@@ -84,9 +100,9 @@
   }
 
   .port-content {
-    background: var(--ui-black);
-    color: var(--ui-white);
-    border: 1px solid var(--ui-border);
+    background: var(--nord0);
+    color: var(--nord6);
+    border: 1px solid var(--nord3);
     border-radius: 8px;
     padding: 16px;
     max-width: 90%;
@@ -99,8 +115,8 @@
   .port-close {
     margin-top: 16px;
     background: transparent;
-    border: 1px solid var(--ui-border);
-    color: var(--ui-white);
+    border: 1px solid var(--nord3);
+    color: var(--nord6);
     border-radius: 6px;
     padding: 6px 12px;
     cursor: pointer;
@@ -115,7 +131,7 @@
     z-index: 90;
     background: #2e344000;
     border-radius: 8px;
-    color: var(--ui-border);
+    color: var(--nord3);
     white-space: nowrap;
     transition: opacity .3s;
 
@@ -138,7 +154,7 @@
 <div class="global-panel">
   <button class="panel-button" id="undoBtn">Undo</button>
   <button class="panel-button" id="redoBtn">Redo</button>
-  <div style="border-left: 1px solid var(--ui-border); height: 24px; margin: 0 6px;"></div>
+  <div style="border-left: 1px solid var(--nord3); height: 24px; margin: 0 6px;"></div>
   Export:
   <button class="panel-button" id="urlBtn">URL</button>
   <button class="panel-button" id="jsonBtn">JSON</button>
@@ -333,6 +349,10 @@
 </script>
 
 <script>
+  const root = document.querySelector(':root');
+  const computedRoot = getComputedStyle(root);
+  const getCssVar = (name) => computedRoot.getPropertyValue(name);
+
   let linkIdCounter = 0;
   let nodes = [], links = [];
   let dragSourceNode = null, interimLink = null;
@@ -633,14 +653,14 @@
       commitChange();
     })
     .nodeColor(node => {
-      if (node === selectedNode) return '#ebcb8b';
-      if (node.group && node.group.includes('start') && node.group.includes('accept')) return '#b48ead';
-      if (node.group && node.group.includes('start')) return '#8fbcbb';
-      if (node.group && node.group.includes('accept')) return '#88c0d0';
-      if (node === dragSourceNode || (interimLink && (node === interimLink.source || node === interimLink.target))) return '#ebcb8b';
-      return '#81a1c1';
+      if (node === selectedNode) return getCssVar('--nord13');
+      if (node.group && node.group.includes('start') && node.group.includes('accept')) return getCssVar('--nord15');
+      if (node.group && node.group.includes('start')) return getCssVar('--nord7');
+      if (node.group && node.group.includes('accept')) return getCssVar('--nord8');
+      if (node === dragSourceNode || (interimLink && (node === interimLink.source || node === interimLink.target))) return getCssVar('--nord13');
+      return getCssVar('--nord9');
     })
-    .linkColor(link => link === interimLink ? '#ebcb8b' : '#81a1c1')
+    .linkColor(link => link === interimLink ? getCssVar('--nord13') : getCssVar('--nord9'))
     .linkLineDash(link => link === interimLink ? [2, 2] : [])
     .onNodeClick((node, event) => {
       if (event.shiftKey) {
@@ -750,11 +770,11 @@
       ctx.save();
       ctx.translate(textPos.x, textPos.y);
       ctx.rotate(textAngle);
-      ctx.fillStyle = '#eceff4a0';
+      ctx.fillStyle = getCssVar('--nord6-a625');
       ctx.fillRect(-bckgDimensions[0] / 2, -bckgDimensions[1] / 2, ...bckgDimensions);
       ctx.textAlign = 'center';
       ctx.textBaseline = 'middle';
-      ctx.fillStyle = '#5e81aca0';
+      ctx.fillStyle = getCssVar('--nord10-a625');
       ctx.fillText(label, 0, 0);
       ctx.restore();
     });
