--- a/dfa_create.html
+++ b/dfa_create.html
@@ -172,9 +172,9 @@
     <div style="text-align: center;">
       <b>New node:</b> click canvas | <b>New link:</b> right-click source and target node
       <br>
-      <b>Rename</b> click node or link | <b>Remove</b> shift-click node or link
+      <b>Rename:</b> click node or link | <b>Remove:</b> shift-click node or link
       <br>
-      <b>Select</b> right-click, use 'a' to toggle accepting or 's' to toggle start
+      <b>Select:</b> right-click, use 'a' to toggle accepting or 's' to toggle start
     </div>
   </div>
   <div id="graph"></div>
